--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,47 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 1280px;
+  color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.bg-pattern-home-svg-2 {
+  background-image: url('./assets/images/bg-pattern-home-2.svg');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  height: 567px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.bg-pattern-home-svg-3 {
+  background-image: url('./assets/images/bg-pattern-home-3.svg');
+  background-repeat: no-repeat;
+  background-position: top 0 right -80px;
+  height: 1073px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 640px) {
+  .bg-pattern-home-svg-2 {
+    background-image: url('./assets/images/bg-pattern-home-2.svg');
+    background-repeat: no-repeat;
+    background-position: bottom 0 center 0;
+    background-size: auto;
   }
-  to {
-    transform: rotate(360deg);
+  .bg-pattern-home-svg-3 {
+    background-image: url('./assets/images/bg-pattern-home-3.svg');
+    background-repeat: no-repeat;
+    background-position: 150% 0;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (min-width: 1024px) {
+  .bg-pattern-home-svg-2 {
+    background-image: url('./assets/images/bg-pattern-home-2.svg');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  .bg-pattern-home-svg-3 {
+    background-image: url('./assets/images/bg-pattern-home-3.svg');
+    background-repeat: no-repeat;
+    background-position: 150% 0;
+  }
 }
