Began adding routes

--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,19 @@
   color: white;
 }
 
-.bg-home-section-1 {
+.home-section-1 {
   background-image: url('./assets/images/bg-pattern-home-2.svg');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: contain;
 }
-.bg-home-section-2 {
+.home-section-2 {
   background-image: url('./assets/images/bg-pattern-home-3.svg');
   background-repeat: no-repeat;
   background-position: top 0 right -80px;
 }
 
-.bg-home-section-3 {
+.home-section-3 {
   background-image: url('./assets/images/bg-pattern-home-4-about-3.svg'),
     url('./assets/images/bg-pattern-about-2-contact-1.svg');
   background-repeat: no-repeat;
@@ -23,26 +23,26 @@
 }
 
 @media (min-width: 640px) {
-  .bg-home-section-1 {
+  .home-section-1 {
     background-position: bottom 0 center 0;
     background-size: auto;
   }
-  .bg-home-section-2 {
+  .home-section-2 {
     background-position: 150% 0;
   }
 
-  .bg-home-section-4 {
+  .home-section-4 {
     background: url('./assets/images/bg-pattern-home-6-about-5.svg') no-repeat;
     background-position: bottom -1rem left 0;
   }
 }
 
 @media (min-width: 1024px) {
-  .bg-home-section-1 {
+  .home-section-1 {
     background-position: bottom 0 right 140px;
     background-size: auto;
   }
-  .bg-home-section-2 {
+  .home-section-2 {
     background-image: url('./assets/images/bg-pattern-home-3.svg');
   }
 }
