Added contact page. Working on finishing up styling for mobile and desktop

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
     background-position: 150% 0;
   }
 
-  .home-section-4 {
+  .contact-section {
     background: url('./assets/images/bg-pattern-home-6-about-5.svg') no-repeat;
     background-position: bottom -1rem left 0;
   }
