--- a/src/routes/home/home.module.css
+++ b/src/routes/home/home.module.css
@@ -34,15 +34,9 @@
 
 @media (min-width: 1024px) {
   .section-1 {
-    /* @keyframes animatedBackground {
-     from {
-       background-position: bottom right;
-     }
-     to {
-       background-position: bottom left;
-     }
-   } */
-    background-position: bottom right;
+    background-image: url('../../assets/images/bg-pattern-home-2.svg'),
+      url('../../assets/images/bg-pattern-home-1.svg');
+    background-position: bottom right, top 80px left -100px;
     background-size: auto;
     /* animation: animatedBackground 10s linear; */
   }
